file structure update

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
       src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"
       crossorigin
     ></script>
-    <script type="module" src="./components/App.jsx"></script>
+    <script type="module" src="./components/App/App.jsx"></script>
   </body>
 </html>
