--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ludo</title>
-    <link rel="stylesheet" href="index.5154a49e.css" />
-  </head>
-  <body>
-    <div id="root">not rendered</div>
-    <script
-      src="https://unpkg.com/react@18.2.0/umd/react.development.js"
-      crossorigin
-    ></script>
-    <script
-      src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"
-      crossorigin
-    ></script>
-    <script type="module" src="index.d36f36bc.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Ludo</title><link rel="stylesheet" href="/!Ludo/Ludo/src/index.532bfe35.css"></head><body> <div id="root">not rendered</div> <script src="https://unpkg.com/react@18.2.0/umd/react.development.js" crossorigin></script> <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js" crossorigin></script> <script type="module" src="/!Ludo/Ludo/src/index.968cd23a.js"></script> </body></html>
